--- a/babmukja/src/main/webapp/resources/css/member/signup.css
+++ b/babmukja/src/main/webapp/resources/css/member/signup.css
@@ -158,16 +158,16 @@
   align-items: center;
   text-align: center;
 }
-.signUp__button a {
+.signUp__button button {
   width: 370px;
   height: 50px;
-  text-decoration: none;
   background-color: #7db341;
   color: white;
   font-weight: bold;
   border-radius: 5px;
   font-size: 20px;
   line-height: 45px;
+  border: none;
 }
 .member__login {
   margin-top: 20px;
