--- a/babmukja/src/main/webapp/resources/css/store/mainpb.css
+++ b/babmukja/src/main/webapp/resources/css/store/mainpb.css
@@ -135,6 +135,7 @@
 .pb_store_popular_product_img > img{
   width: 100%;
   height: 100%;
+  border-radius: 5px;
 }
 
 a:link {
@@ -183,6 +184,7 @@ margin-top: -10px;
     grid-auto-rows: 280px;
     grid-gap: 2em;
     position: relative;
+    
 }
 
 /* 
