--- a/babmukja/src/main/webapp/resources/css/notice/notice detail.css
+++ b/babmukja/src/main/webapp/resources/css/notice/notice detail.css
@@ -59,6 +59,7 @@
 .babnotices, .babitem {
    height: 50px;
    font-size: 2em;
+   vertical-align:middle middle;
 }
 
 .babtd5{
@@ -81,4 +82,10 @@
     height: 100px;
     font-size: 1.5em;
     font-weight: 500;
+}
+.detail_bn{
+	color: gold;
+	font-size: 1.3em;
+	background: skyblue;
+	float: right;
 }
