--- a/babmukja/src/main/webapp/resources/css/member/signup.css
+++ b/babmukja/src/main/webapp/resources/css/member/signup.css
@@ -84,15 +84,13 @@
   border-color: #7db341;
   transition: border-color 0.5s ease-in-out;
 }
+/*
 .signUp-email input {
   box-sizing: border-box;
   width: 165px;
   height: 30px;
 }
-.signUp-email input[name="email1"] {
-  width: 162px;
-  height: 30px;
-}
+
 .signUp-email {
   display: flex;
   flex-direction: column;
@@ -103,6 +101,7 @@
   display: flex;
   justify-content: space-between;
 }
+*/
 .signUp-id input {
   width: 230px;
   height: 30px;
