--- a/babmukja/src/main/webapp/resources/css/admin/adminmain.css
+++ b/babmukja/src/main/webapp/resources/css/admin/adminmain.css
@@ -23,7 +23,7 @@ body{
 #info-container > div {
     height: 100px;
     border : 1px solid gainsboro;
-    box-shadow: 15px 15px 15px 2px gray;
+    box-shadow: 10px 10px 10px 1px lightgray;
     margin-bottom: 25px;
 }
 
