--- a/babmukja/src/main/webapp/resources/css/store/detailpb.css
+++ b/babmukja/src/main/webapp/resources/css/store/detailpb.css
@@ -166,6 +166,7 @@
 #pb_detail_menubar {
     display: flex;
     font-size: 30px;
+    width:1200px;
     color: rgb(81, 81, 81);
     padding: 10px;
     text-align: center;
@@ -174,6 +175,8 @@
     border: 2px solid gainsboro;
     margin-top: 50px;
     background-color: white;
+    position: sticky;
+    top:10%;
 }
 
  #detail_product_info {
