--- a/babmukja/src/main/webapp/resources/css/notice/notice list.css
+++ b/babmukja/src/main/webapp/resources/css/notice/notice list.css
@@ -69,6 +69,7 @@
     cursor:pointer;
     text-decoration: none;
     color:inherit;
+    font-size:1.3em;
 }
 .bntView:hover{
   background-color:black;
