insertform.css / jsp 추가

--- a/babmukja/src/main/webapp/resources/css/notice/notice index.css
+++ b/babmukja/src/main/webapp/resources/css/notice/notice index.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
+.inquiry {
+	width: 1200px;
+	margin: 0 auto;
+}
+
 .customer, .customer2{
 margin-top: 0px;margin-bottom: 10px;padding-right: 5px; font-weight: bold;
 }
