--- a/babmukja/src/main/webapp/resources/css/store/mainpb.css
+++ b/babmukja/src/main/webapp/resources/css/store/mainpb.css
@@ -32,7 +32,7 @@
   position: relative;
 }
 
-#pb_store_today_product_img > #pb_store_today_img > img {
+#pb_store_today_product_img > #pb_store_today_img > .pb_store_today_product_imges > img {
   float: left;
   width: 1000px;
   height: 500px;
@@ -181,10 +181,14 @@ margin-top: -10px;
     margin-top: 20px;
     margin-left: 10px;
     grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: 280px;
+    grid-auto-rows: 250px;
     grid-gap: 2em;
     position: relative;
     
+}
+
+#pb_store_popular_product_img > #pb_store_popular_product_imges > #pb_store_popular_product_imges_grid > a > img{
+	width: 100%;
 }
 
 /* 
