--- a/babmukja/src/main/webapp/resources/css/recipe/recipewriteform.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipewriteform.css
@@ -44,6 +44,7 @@ button{
     color :White;
     border-radius: 5px;
     transition: .3s;
+    margin-bottom: 100px;
 }
 button:hover{
     background :#7db341;
