--- a/babmukja/src/main/webapp/resources/css/recipe/recipewriteform.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipewriteform.css
@@ -55,9 +55,10 @@ button:hover{
     height: 50px;
     border-radius : 5px;
     border : 1px solid gainsboro;
-    font-size: 26px;
+    font-size: 20px;
     font-weight: bolder;
     display: block;
     margin-left :274px;
     outline: #7db341;
+    text-align: center;
 }
