--- a/babmukja/src/main/webapp/resources/css/store/detailpb.css
+++ b/babmukja/src/main/webapp/resources/css/store/detailpb.css
@@ -163,6 +163,10 @@
     color: white;
 }
 
+#product_info_detail {
+	margin-top: 50px;
+}
+
 #pb_detail_menubar {
     display: flex;
     font-size: 30px;
@@ -176,8 +180,14 @@
     margin-top: 50px;
     background-color: white;
     position: sticky;
-    top:10%;
+    top:8%;
+    z-index: 100;
 }
+
+#pb_review_writeform, #pb_inquire_writeform, #count_minus, #count_plus, .add_to_cart, .buy_now {
+	cursor: pointer;
+}
+
 
  #detail_product_info {
     border-right: 3px solid gainsboro;
@@ -426,4 +436,8 @@
     top: -50px;
     left: 150px;
     width: 1200px;
+}
+
+#post-body{
+	position: relative;
 }
