--- a/babmukja/src/main/webapp/resources/css/menubar.css
+++ b/babmukja/src/main/webapp/resources/css/menubar.css
@@ -13,8 +13,12 @@
     border-bottom: 1px solid gainsboro;
 }
 
-#menuContent ul {
-    list-style: none;
+ul,ol{
+	margin-top:20px !important;
+}
+
+#menuContent>ul {
+    list-style: none ;
 }
 #menuContent a{
     text-decoration: none;
@@ -23,16 +27,16 @@
 #menuContent a:visited{
     text-decoration: none;
 }
-#menuContent li{
+#menuContent>ul>li{
     display: inline-block;
     font-size: 15px;
     font-weight: bolder;
     margin-left : 25px;
 }
-#menuContent li > a{
+#menuContent>ul>li>a{
     transition: .3s;
 }
-#menuContent li > a:hover{
+#menuContent>ul>li>a:hover{
     color: #7db341;
 }
 #home{
@@ -59,15 +63,15 @@
     height : 100%;
     padding-top: 5px;
 }
-#sign > a{
-    line-height: 50px;
-    margin-left:10px;
+#sign>a{
+    line-height: 50px ;
+    margin-left:10px ;
 }
-#sign >a:first{
-    border-right: 1px solid #7db341;
+#sign>a:first{
+    border-right: 1px solid #7db341 ;
 }
-#sign> i{
-    color: #7db341;
+#sign>i{
+    color: #7db341 !important;
 }
 .optionalMenubar{
     position: absolute;
@@ -84,11 +88,15 @@
     list-style: none;
 }
 a{
-    text-decoration: none;
-    color: rgb(81,81,81);
+    text-decoration: none !important;
+    color: rgb(81,81,81) !important;
 }
 a:visited{
-    text-decoration: none;
+    text-decoration: none !important;
+}
+a:hover{
+    text-decoration: none !important;
+	underline:none;
 }
 .optionalMenubar li{
     display: inline-block;
@@ -102,3 +110,4 @@ a:visited{
 .optionalMenubar li > a:hover{
     color: #7db341;
 }
+
