--- a/babmukja/src/main/webapp/resources/css/recipe/recipemain.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipemain.css
@@ -1,141 +1,331 @@
-@charset "UTF-8";
+html, body {
+    position: relative;
+    height: 100%;
+  }
+  body {
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    color:#000;
+    margin: 0;
+    padding: 0;
+  } 
 
-body {
-    color: rgb(81,81,81);
+.swiper-container {
+    width: 100%;
+    height: 100%;
+    background-color: tomato;
+  }
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+  .swiper-slide > img{
+    width: 100%;
+    height: 100%;
+  }
+  .swiper-slide > p{
+    position: absolute;
+    margin : 0 auto;
+    font-size : 60px;
+    font-weight: bolder;
+    color : white;
+  }
+  .swiper-slide > div:first-child{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    animation: fadeout 2s linear 1 alternate;
+    background:rgba(0,0,0,0.3);
+  }
+  @keyframes fadeout{
+      0%{background : rgba(0,0,0,1);}
+      100%{background:rgba(0,0,0,0.3);}
+  }
+    #main-body{
+      width: 1300px;
+      margin: 0 auto;
+      height: 2000px;
+    }
+#sector1{
+    width: 100%;
+    height: 700px;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    font-family: 'East Sea Dokdo', cursive;
+    color:white;
+    background-image:url(../../images/chalkboard.png);
+    background-size: cover;
 }
-a {
-    text-decoration: none;
-    color: rgb(81,81,81);            
-}
-#container {
-    width: 1200px;
-    margin: 0 auto;
-}
-.text {
-    font-size: 30px;
-    height: 100px;
-    font-weight: bold;
-}
-hr {
-    border : 2px solid gainsboro;
-}
-.recipe {
-    width: 700px;
-    height: 500px;
-    float: left;            
-}
-.recipe > img {
-    width: 700px;
-    height: 500px;
-    border-radius: 5px;
-}
-.profile {
-    width: 500px;
-    height: 500px;            
-    display: inline-block;
-    position: relative;    
+#sec1-content1-wrapper{
+    display: grid;
+    height: 100%;
+    grid-template-rows: 20% 60% 20%;
 } 
-#info {
-    height: 100px;
+#sec1-content1-wrapper>div:nth-child(1){
+    color: #f05e8c;
+    transform: rotate(-3deg);
 }
-#info > img {
-    width: 80px; height: 80px;
-    border-radius: 500px;
-    position: relative;
-    top: 10px; left: 50px;
-}  
-#info p {
-    position: relative;
-    top: -80px; left: 150px;
-    
-}      
-#content {
-    height: 200px;
+#sec1-content1-wrapper>div:nth-child(2n+1){
+    width : 100%;
+    font-size:60px;
+    text-align: center;
+    margin-top: 30px;
+}
+#sec1-content1-wrapper> div>img{
+    width : 100%;
+    height:100%;
+    background: #222;
+    z-index : 1;
+    box-shadow: 7px 7px 9px 1px black ;
+    transform: rotate(-1deg);
+}
+#monthrecipe-keyword{
+    color : #7db341;
+}
+#paragraph{
+    margin-left: 15px;
+}
+#monthly-profile{
+    width : 90px;
+    height: 90px;
+    padding-top: 12px;
+    border-radius: 50px;
+}
+#monthly-profile-wrapper{
+    display: inline-block;
+    background:url(/../../images/circle.png);
+    background-size: cover;
+    width: 112px;
+    height: 112px;
+    padding : 1px;
+}
+.boundary{
+    background: url(../../images/wood.png);
+    box-shadow: 0px 10px 15px 2px white;
+    height:100px;
+}
+#sec1-content2-wrapper{
+    display:grid;
+    height: 100%;
+    grid-template-rows: 15% 40% 35% 10%;
+}
+#sec1-content2-wrapper > div:nth-child(2){
+    padding: 20px;
     font-size: 30px;
+}
+#sec1-content2-wrapper > div:nth-child(1){
+    font-size:60px;
+    text-align: center;
+    padding: 20px;
+    font-size: 60px;
+}
+#sec1-content2-wrapper > div:nth-child(3){
+    margin: 0px 20px 0 33px;
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    background: url(../../images/boardgrid.png) no-repeat;
+    background-size: cover;
+}
+#sec1-content2-wrapper > div:nth-child(3) > div{
+    padding-left: 18px;
+    height: 210px;
+}
+#sec1-content2-wrapper > div:nth-child(3) > div >img{
+    width: 100px;
+    height: 100px;
+    transition: .6s;
+}
+#sec1-content2-wrapper > div:nth-child(3) > div >img:hover{
+    transform: rotateZ(10deg);
+}
+#bottle{
+    width: 110px;
+    height: 110px;
+    transition: .7s;
+    margin-left: 10px;
+}
+#bottle:hover{
+    transform: rotate(15deg);
+}
+#sec1-content2-wrapper > div:nth-child(3){
+    font-size: 30px;
+}
+#sec1-content2-wrapper > div:nth-child(3) > div> b{
+    font-size: 30px;
+    color: #fff200;
+}
+#sec1-content2-wrapper > div:nth-child(3) > div:nth-child(4)> img{
+    width: 50px;
+    height: 164px;
+}
+#sec1-content2-wrapper > div:nth-child(4){
+    font-size : 50px;
     text-align: center;
 }
-#pic {          
-    height: 185px;
-    display: grid;         
-    grid-template-columns:1fr 2fr 2fr 2fr 1fr;
-    grid-column-gap: 15px;
-          
+#sticker{
+    position: absolute;
+    width: 164px;
+    height : 42px;
+    background:url(../../images/tapetexture.png);
+    transform: rotate(-30deg);
+    z-index: 2;
 }
-#pic img {
-    border-radius: 5px;
-    position: relative;
-    top: 25px;
-    line-height: 20px;
-    width: 130px; height: 140px;
-}
-.month {
-    margin-top: 40px;
-    height: 500px;        
-    display: grid;   
-    grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 30px;        
-    margin-bottom: 50px;    
-    font-size: 20px;
-}
-.month span {
-    position: relative;
-    top: -35px;
-}
-.month img {
-    border-radius: 5px;
-    width: 280px; height: 300px;            
-}
-.month .mem {
-    width: 80px; height: 80px;
-    border-radius: 200px;
+#sticker2{
+    position: absolute;
+    width: 164px;
+    height : 42px;
+    background:url(../../images/tapetexture2.png);
+    transform: translateX(500px) translateY(-35px) rotate(-30deg);
+    z-index: 2;
+
 }
 
-.key {
-    height: 1000px;           
+#sector2{
+    width: 100%;
+    height: 1300px;
+    font-family: 'East Sea Dokdo', cursive;
+    background: url(../../images/chalkboardbig.png);
+}
+#sector2-header{
+    text-align: center;
+    padding-top: 45px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 25px; 
-    margin-bottom: 100px;
+    grid-template-columns: 25% 50% 25%;
+    opacity: 0.9;
+    color: white;
 }
-.key img {
-    filter: brightness(50%);
-    border-radius: 5px;
-    width: 280px; height: 350px;
+#sector2-header > div:nth-child(1){
+    font-size: 60px;
 }
-#text {
+#sector2-header > div:nth-child(2){
+    font-size: 100px;
+}
+#sector2-header > div:nth-child(3){
+    font-size: 70px;
+}
+.recipe-book{
+    display: inline-block;
+    width: 350px;    
+    height: 450px;
+    position: absolute;
+    transition: ease-in-out 1s;
+    box-shadow: 5px 5px 15px 1px black;
+}
+#recipe-book1 {
+    background: url(../../images/recipebook1.jpg);
+    background-size: cover;
+    transform: translateX(950px) rotateZ(5deg);
+}
+#recipe-book2 {
+    background: url(../../images/recipebook2.jpg);
+    background-size: cover;
+    transform: translateX(30px) rotateZ(-20deg);
+}
+#recipe-book3 {
+    background: url(../../images/recipebook3.jpg);
+    background-size: cover;
+    transform: translateX(850px) translateY(700px) rotateZ(30deg); 
+}
+#recipe-book4 {
+    background: url(../../images/recipebook4.jpg);
+    background-size: cover;
+    transform: translateX(30px) translateY(600px) rotateZ(-5deg);
+}
+#recipe-book1:hover,
+#recipe-book2:hover,
+#recipe-book3:hover,
+#recipe-book4:hover
+{
+    transform:  translateX(450px) translateY(200px) scale(1.5);
+    box-shadow: 0px 0px 15px 1px goldenrod;
+    z-index: 50;
+}
+
+#recipe-book-container > p{
     position: absolute;
     color: white;
-    font-size: 30px;
-    font-weight: bold;
-    margin: 0 auto;
-    padding-left: 85px;
-    margin-top: -210px;  
-}
-.today {
-    height: 800px;            
-    margin-top: 40px;
-    height: 400px;        
-    display: grid;   
-    grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 30px;        
-    margin-bottom: 50px;    
-    font-size: 20px;
-}
-.today span {
-    position: relative;
-    top: -35px;
-}
-.today img {
-    border-radius: 5px;
-    width: 280px; height: 300px;            
-}
-.today .mem {
-    width: 80px; height: 80px;
-    border-radius: 200px;
+    margin: 400px;
+    text-align: center;
+    font-size: 50px;
 }
 
-.plus a {
-    position: relative;
-    top: -15px;
-    font-size: 20px;
+#sector3{
+    width: 1300px;
+    background:url(../../images/background.jpg) no-repeat;
+    background-size: cover;
+    height: 1400px;
+    display: grid;
+    grid-template-rows: 60% 40%;
+}
+#sector3-body{
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows:50% 50%;
+}
+#sector3-body>div{
+    margin: 5px;
+    box-shadow: 1px 1px 10px 1px black;
+}
+#sector3-body>div:nth-child(n){
+    background:url(../../images/note4.png) no-repeat;
+    background-size: cover;
+}
+#sector3-body>div:nth-child(2n){
+    background:url(../../images/note3.jpg) no-repeat;
+    background-size: cover;
+}
+#sector3-body>div:nth-child(3n){
+    background:url(../../images/note1.png) no-repeat;
+    background-size: cover;
+}
+#sector3-body>div:nth-child(4n){
+    background:url(../../images/note2.png) no-repeat;
+    background-size: cover;
+}
+
+.profile-container{
+    display: grid;
+    grid-template-rows: 25% 60% 15%;
+}
+.profile-pic-box{
+    display: grid;
+    grid-template-columns: 30% 70%;
+}
+.profile-picture{
+    width: 70px;
+    height: 70px;
+    border-radius: 40px;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+.profile-name{
+    font-size : 20px;
+}
+.recipe-pic-box > img{ 
+    width: 97%;
+    margin: 5px;
+}
+.recipe-info{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    font-size: 12px;
+    font-weight: lighter;
+}
+.recipe-info i{
+    padding-right: 10px;
 }
