--- a/babmukja/src/main/webapp/resources/css/store/pbstoreselectlist.css
+++ b/babmukja/src/main/webapp/resources/css/store/pbstoreselectlist.css
@@ -7,6 +7,14 @@
     margin-bottom: 50px;
 }
 
+.adming_pb_selectAll {
+    font-size: 40px;
+    margin-top: 120px;
+    text-align: center;
+    font-weight: bold;
+    color: rgb(81, 81, 81);
+}
+
 .admin_pb_selectList {
     display: flex;
     text-align: center;
@@ -14,15 +22,74 @@
     justify-content: center;
 }
 
+.admin_pb_selectList_table {
+	border-collapse: separate;
+	border-spacing: 1px;
+	text-align: center;
+	line-height: 1.5;
+	margin : 20px 10px;
+	margin-top: 70px;
+}
+
 .admin_pb_selectList_table > tbody > tr > th {
-    padding: 50px;
-    font-size: 25px;
+    width: 150px;
+    padding: 10px;
+    font-size: 20px;
+    vertical-align: top;
     font-weight: bold;
+    border-bottom: 1px solid #ccc;
+    color: rgb(81, 81, 81);
+    
+    
 }
 
 .admin_pb_selectList_table > tbody > tr > td {
-    padding: 15px;
-    font-size: 15px;
-    font-weight: bold;
+    width: 300px;
+    padding: 10px;
+    vertical-align: top;
+    border-bottom: 1px solid #ccc;
+    color: rgb(81, 81, 81);
+    
 }
 
+.list_td:hover {
+	background-color: rgba(220, 220, 220, 0.5);
+}
+
+.page {
+	font-size: 15px;
+}
+
+.page > div{
+	font-size: 20px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.pb_store_update_btn {
+    outline: 0;
+    width: 50px;
+    height: 25px;
+    background-color: white;
+    border-radius: 5px;
+    color: #7db341;
+}
+
+.pb_store_update_btn:hover {
+    background-color: rgba(220, 220, 220, 1.0);
+    color: white;
+}
+
+.pb_store_delete_btn {
+    outline: 0;
+    width: 50px;
+    height: 25px;
+    background-color: white;
+    border-radius: 5px;
+    color: #7db341;
+}
+
+.pb_store_delete_btn:hover {
+    background-color: rgba(220, 220, 220, 1.0);
+    color: white;
+}
