--- a/babmukja/src/main/webapp/resources/css/store/detailpb.css
+++ b/babmukja/src/main/webapp/resources/css/store/detailpb.css
@@ -476,8 +476,55 @@
     border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 5px;
     width: 500px;
-    height: 250px;
+    height: 170px;
     resize: none;
+}
+
+.content_length {
+    display: flex;
+    width: 100%;
+    align-items: flex-end;
+    justify-content: flex-end;
+    font-size: 15px;
+    color: gray;
+}
+
+.pb_product_content textarea {
+    width: 500px;
+}
+
+#preview_img_div {
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-gap : 5px;
+}
+
+.imgPlus {
+    width: 100px;
+    height: 100px;
+    border: 1px dotted gray;
+    color: gray;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    border-radius: 5px;
+    cursor : pointer;
+    
+}
+
+.review_images {
+    display: flex;
+    width: 500px;
+}
+
+#img_file {
+    display: none;
+}
+
+.pb_product_content {
+    height: 250px;
 }
 
 .pb_product_content textarea:focus {
@@ -485,32 +532,14 @@
     transition: border-color 0.5s ease-in-out;
 }
 
-.image_choice input[type="file"] {
-    position: absolute; 
-    width: 1px; 
-    height: 1px; 
-    padding: 0; 
-    margin: -1px; 
-    overflow: hidden; 
-    clip:rect(0,0,0,0); 
-    border: 0;
+.pb_insertform_container > .pb_product_content,
+                           .pb_reviewMap,
+                           .pb_product_plus {
+    display: flex;
+    flex-direction: column;
+    align-items: center;   
 }
 
-.image_choice label {
-    display: inline-block; 
-    padding: .5em .75em; 
-    color: white; 
-    font-size: inherit; 
-    line-height: normal; 
-    vertical-align: middle; 
-    background-color: #7db341; 
-    cursor: pointer; 
-    border: 1px solid #ebebeb; 
-    border-bottom-color: #e2e2e2; 
-    border-radius: .25em;
-    font-weight: bold;
-    margin-bottom: 30px;
-}
 
 .modal-footer {
     display: flex;
@@ -527,17 +556,6 @@
     cursor: pointer; 
     border-radius: .25em;
     font-weight: bold;
-}
-
-.image_container {
-    width: 500px;
-    height: 250px;
-    border: 2px solid gainsboro;
-    margin: 0 auto;
-    margin-top: 20px;
-    border-radius: 5px;
-    background-position: center center;
-    margin-bottom: 20px;
 }
 
 .pb_product_item {
@@ -574,11 +592,13 @@
     text-align: center;
 }
 
-.pb_product_item_price {
-    font-size: 15px;
-    
-    font-weight: bold;
-
+.review_images_msg {
+	font-weight: bold;
+    font-size: 18px;
+    margin-left: 8px;
+    margin-bottom: 30px;
+    width: 100%;
+    text-align: left;
 }
 
 .rating_msg {
@@ -657,3 +677,4 @@
   #reviewStars-input #star-5 {
     left: 265px;
   }
+
