--- a/babmukja/src/main/webapp/resources/css/admin/adminboard.css
+++ b/babmukja/src/main/webapp/resources/css/admin/adminboard.css
@@ -1,100 +1,173 @@
-@charset "UTF-8";
 body{
     background: gainsboro;
 }
-
+button{
+    cursor: pointer;
+}
+button:focus{
+    outline: none;
+}
 
 #main{
+    border: 6px solid darkcyan;
+    border-radius: 0 0 10px 10px;
     background: white;
-    display: grid;
-    grid-template-columns: 70% 30%;
 }
-#graph{
-    height: 700px;
+#main-header{
     margin: 30px;
-    border : 1px solid gainsboro;
 }
-#graph >h2{
-    color : #7db341;
-    padding: 30px;    
+#member-search-header{
+    font-size: 25px;
+    border : 1px solid gray;
+    padding: 10px;
 }
-#info-container {
+#member-search-input{
+    background: gainsboro;
     padding : 30px;
+    border-right: 1px solid gray;
+    border-left : 1px solid gray;
 }
-#info-container > div {
-    height: 100px;
-    border : 1px solid gainsboro;
-    box-shadow: 10px 10px 10px 1px lightgray;
-    margin-bottom: 25px;
+#member-search-input > div{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    height : 35px;
 }
-
-#info-container > div:nth-child(4){
-    height : 400px;
+.search{
+    width: 150px;
+    height: 35px;
+    font-size: 15px;
+    font-weight: bold;
 }
-#today-sales>div >div:nth-child(1){
-    text-align: center;
-    font-weight: bolder;
-    color: white;
-    border: 1px solid gainsboro;
-    background: tomato;
-    padding: 5px;
+.search_form_input{
+    height: 30px;
+    font-size : 15px;
+    width: 500px;
 }
-#today-sales>div >div:nth-child(2){
-    text-align: center;
-    font-weight: bolder;
+#member-search-button{
+    font-size: 15px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    border: 1px solid gray;
+    padding: 10px;
+}
+#member-search-button > button{
+    width: 150px;
+    height: 50px;
+    border : 0;
+    background : #7db341;
+    border-radius: 5px;
     font-size : 20px;
-    color:rgb(81,81,81);
-    height: 100%;
-    line-height: 50px;
+    color: white;
+    font-weight: bolder;
 }
-
-#today-signup{
+#detail{
+    font-size: 30px;
+    color: white;
+    height: 36px;
+    width: 36px;
+    margin-left : 15px;
+    border-radius: 18px;
+    background: #7db341;
+    border: 0;
+    transition: .3s;
+}
+#detail:hover{
+    background:tomato;
+}
+#detail-search{
+    padding: 10px;
+    border-top: 1px solid gray;
+    border-left : 1px solid gray;
+    border-right : 1px solid gray;
+    background: white;
+}
+#detail-search-content > div {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 20% 80%;
 }
-#today-signup > div{
-    text-align: center;
-    font-weight: bolder;
+#detail-search-content > div > div:nth-child(1) div {
+    background: #7db341;
+    font-size: 19px;
+    font-weight: bold;
     color: white;
-    border: 1px solid gainsboro;
+    border : 1px solid gainsboro;
+    padding: 10px;
 }
-#today-signup> div>div:nth-child(1){
-    background: darkcyan;
-    padding:5px;
+#detail-search-content > div > div:nth-child(2) div {
+    background: white;
+    font-size: 19px;
+    font-weight: bold;
+    color: rgb(81,81,81);
+    border : 1px solid gainsboro;
+    padding: 10px;
 }
-#today-signup> div>div:nth-child(2){
-    padding:5px;
-    color:rgb(81,81,81);
-    font-size: 20px;
-    height: 100%;
-    line-height: 50px;
+#search-output{
+    margin: 30px;
+    border: 1px solid gray;
 }
-#today-signin>div >div:nth-child(1){
+#search-output-header{
+    font-size: 25px;
+    border-bottom: 1px solid gray;
+    padding: 10px;
+}
+#search-output-list table{
+    border-collapse: collapse;
+}
+#search-output-list th,tr,td{
+    border : 1px solid gray;
+}
+table {
+	width : 100%;
+}
+th{
     text-align: center;
-    font-weight: bolder;
-    color: white;
-    border: 1px solid gainsboro;
-    background: darkgoldenrod;
+    background: #7db341;
+    color : white;
+    font-weight: bold;
     padding: 5px;
+    font-size : 17px;
 }
-#today-signin>div >div:nth-child(2){
-    text-align: center;
-    font-weight: bolder;
-    font-size : 20px;
-    color:rgb(81,81,81);
-    height: 100%;
-    line-height: 50px;
+td:nth-child(1){
+    width: 50px;
 }
-#today-cs > div> div:nth-child(1){
-    
-    text-align: center;
-    font-weight: bolder;
-    color: white;
-    background: darkslategrey;
-    padding: 5px;
+td:nth-child(2){
+    width: 80px;
 }
-#today-cs > div> div:nth-child(2){
-    border: 1px solid gainsboro;
-    padding: 5px;
-    height: 100%;
+td:nth-child(3){
+    width: 100px;
+}
+td:nth-child(4){
+    width: 200px;
+}
+td:nth-child(5){
+    width: 120px;
+}
+td:nth-child(6){
+    width: 100px;
+}
+td:nth-child(7){
+    width: 140px;
+}
+td:nth-child(8){
+    width: 200px;
+}
+td:nth-child(9){
+    width: 200px;
+}
+td:nth-child(10){
+    width: 200px;
+}
+td:nth-child(11){
+    width: 100px;
+}
+td:nth-child(12){
+    width: 100px;
+}
+td:nth-child(13){
+    width: 100px;
+}
+td:nth-child(14){
+    width: 100px;
 }
