--- a/babmukja/src/main/webapp/resources/css/store/detailpb.css
+++ b/babmukja/src/main/webapp/resources/css/store/detailpb.css
@@ -274,6 +274,7 @@
     width: 60px;
     height: 60px;
     border-radius: 30px;
+    margin-top: -20px;
 }
 
 #pb_review_user_info {
@@ -295,8 +296,7 @@
 }
 
 #pb_review_select {
-    display: grid;
-    grid-template-columns: 15% 85%;
+	height: auto;
 }
 
 #review_border-bottom {
@@ -305,8 +305,11 @@
 }
 
 #pb_review_select_img{
-    width: 112px;
+    width: 600px;
     height: 112px;
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-gap : 5px;
 }
 
 #pb_review_select_img img {
@@ -339,6 +342,14 @@
 
 #pb_review_select_content {
     color: rgb(81, 81, 81);
+    height: auto;
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+
+#pb_review_body {
+    height: auto;
 }
 
 #pb_review_inquire_header > button:hover {
