레시피 상세 댓글 추가

--- a/babmukja/src/main/webapp/resources/css/recipe/recipe-detail.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipe-detail.css
@@ -196,6 +196,76 @@
 .post-content{
     color:rgb(81,81,81);
 }
+#reviewStars-input input:checked ~ 
+label, #reviewStars-input label, 
+#reviewStars-input label:hover, #reviewStars-input label:hover ~ label {
+    background-image : url('http://positivecrash.com/wp-content/uploads/ico-s71a7fdede6.png');
+    background-size :21px;
+    background-repeat : no-repeat;
+}
+  
+#reviewStars-input {    
+    overflow: hidden;
+    margin-left: 30px;
+    *zoom: 1;
+    display: inline-block;
+  /*position: relative;
+    top: -20px;
+    left: -10px; */
+  }
+  
+  #reviewStars-input input {
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+    opacity: 0;    
+    width: 20px;
+    height: 20px;    
+    position: absolute;
+    top: 0;
+    z-index: 0;
+  }
+  
+  #reviewStars-input input:checked ~ label {
+    background-position: 0 -20px;
+    width: 20px;
+    height: 20px;
+  }
+  
+  #reviewStars-input label {
+    background-position: 0 0;
+    width: 20px;
+    height: 20px;
+    float: right;
+    cursor: pointer;
+    margin-right: 5px;    
+    position: relative;
+    z-index: 1;
+  }
+  
+  #reviewStars-input label:hover, #reviewStars-input label:hover ~ label {
+    background-position: 0 -19px;
+    height: 20px;
+    width: 20px;
+  }
+  
+  #reviewStars-input #star-0 {
+    left: 0px;
+  }
+  #reviewStars-input #star-1 {
+    left: 53px;
+  }
+  #reviewStars-input #star-2 {
+    left: 106px;
+  }
+  #reviewStars-input #star-3 {
+    left: 159px;
+  }
+  #reviewStars-input #star-4 {
+    left: 212px;
+  }
+  #reviewStars-input #star-5 {
+    left: 265px;
+  }
+
 
 #comment-header{
     font-size: 19px;
