--- a/babmukja/src/main/webapp/resources/css/recipe/recipemain.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipemain.css
@@ -325,7 +325,7 @@ html, body {
 	margin-top: 20px;
 	margin-left : 25px;
 }
-.recipe-pic-box > img{ 
+.recipe-pic-box img{ 
     width: 97%;
     margin-top: 15px;
     margin-left: 3px;
