--- a/babmukja/src/main/webapp/resources/css/member/style.css
+++ b/babmukja/src/main/webapp/resources/css/member/style.css
@@ -3,5 +3,6 @@
 @import "signup.css";
 @import "emailform.css";
 @import "emailcheck.css";
-@import "passform.css";
+@import "searchpass.css";
 @import "resetpass.css";
+@import "searchid.css";
