--- a/babmukja/src/main/webapp/resources/css/meetup/meetup_main.css
+++ b/babmukja/src/main/webapp/resources/css/meetup/meetup_main.css
@@ -1,7 +1,8 @@
 .main_container {
 
     width: 1200px;
-    margin-top: 30px;
+    margin-top: 90px;
+    margin-bottom:90px;
     margin-left: auto;
     margin-right: auto;
 
@@ -66,6 +67,7 @@
 
 .after_click {
     margin: 0px auto;
+    margin-top:10px;
     border: 1px solid gainsboro;
     width: 800px;
     display: none;
@@ -392,6 +394,11 @@
 }
 
 /*밑에 modal css 시작 */
+
+#exampleModalLongTitle{
+    color: #7db341;
+    
+}
 .modal_meetup_name_container {
     position: relative;
     top: -18px;
@@ -412,7 +419,9 @@
     align-items: center;
 
 }
-
+.modal_meetup_name{
+    text-align:left;
+}
 .meetup_title {
     width: 350px;
     height: 26px;
@@ -430,7 +439,9 @@
 
     border-bottom: 1px solid gainsboro;
 }
-
+#modal_meetup_tag{
+    text-align: left;
+}
 .modal_meetup_tag_container>div {
     font-size: 17px;
     display: grid;
@@ -451,7 +462,7 @@
     width: 900px;
     height: 90px;
     display: grid;
-    grid-template-columns: 16% 2% 13% 66%;
+    grid-template-columns: 19% 1% 13% 66%;
 
     border-bottom: 1px solid gainsboro;
 }
@@ -461,6 +472,64 @@
     display: grid;
     justify-items: center;
     align-items: center;
+}
+.modal_meetup_day_container{
+    position: relative;
+    top: -18px;
+    margin: 0 auto;
+    text-align: center;
+    width: 900px;
+    height: 90px;
+    display: grid;
+    grid-template-columns: 19% 1% 66%;
+
+    border-bottom: 1px solid gainsboro;
+}
+.modal_meetup_day_container>div {
+    font-size: 17px;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+}
+
+.modal_meetup_day_container>.modal_meetup_day_box{
+    display: block;
+    line-height: 85px;
+    text-align: left;
+}
+.modal_meetup_day_box>span{
+display:inline-block;
+border: 1px solid gainsboro;
+width:35px;
+height:35px;
+border-radius:75px;
+text-align:center;
+margin-right:30px;
+font-size:15px;
+vertical-align:middle;
+line-height:30px;
+}
+.modal_meetup_day_box>label{
+    display:inline-block;
+    border: 1px solid gainsboro;
+    width:35px;
+    height:35px;
+    border-radius:75px;
+    text-align:center;
+    margin-right:30px;
+    font-size:15px;
+    vertical-align:middle;
+    line-height:30px;
+    }
+
+.modal_meetup_day_box input{
+    display:none;
+   
+}
+input[type=checkbox]:checked +label{
+    
+    background-color:  #7db341;
+    color:white;
 }
 .select_modal_city{
 width: 70px;
@@ -500,6 +569,7 @@ width: 70px;
 }
 
 .modal_meetup_fee_container {
+    
     position: relative;
     top: -18px;
     margin: 0 auto;
@@ -543,9 +613,9 @@ width: 70px;
     margin: 0 auto;
     text-align: center;
     width: 900px;
-    height: 90px;
+    
     display: grid;
-    grid-template-columns: 19% 2% 11% 35%;
+    grid-template-columns: 19% 1% 35%;
 
     border-bottom: 1px solid gainsboro;
 }
@@ -559,4 +629,121 @@ width: 70px;
 
 
 /* 부트스트렙 사진 업로드 부분 */
+
+  
+  .file-upload {
+    background-color: #ffffff;
+    width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    padding-left:10px;
+  }
+  
+  .file-upload-btn {
+    width: 100%;
+    margin: 0;
+    color:  #7db341;
+    background:white;
+    border: none;
+    padding: 10px;
+    border-radius: 4px;
+
+    transition: all .2s ease;
+    outline: none;
+    text-transform: uppercase;
+    font-weight: 700;
+  }
+  .file-upload-btn:hover {
+    background: #7db341;
+    color: #ffffff;
+    transition: all .2s ease;
+    cursor: pointer;
+  }
+  .file-upload-btn:active {
+    border: 0;
+    transition: all .2s ease;
+  }
+  
+  .file-upload-content {
+    display: none;
+    text-align: left;
+  }
+  
+  .file-upload-input {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    outline: none;
+    opacity: 0;
+    cursor: pointer;
+  }
+  
+  .image-upload-wrap {
+    margin-top: 10px;
+    border: 4px dashed #1fb264;
+    position: relative;
+  }
+  .image-upload-wrap:hover {
+    background-color: #1fb264;
+    border: 4px dashed #ffffff;
+  }
+  
+  .image-dropping {
+    background-color: #1fb264;
+    border: 4px dashed #ffffff;
+  }
+  
+  .image-title-wrap {
+      position: relative;
+      top:-23px;
+      display: inline-block;
+    padding: 0 15px 15px;
+    color: #222;
+  }
+  
+  .drag-text {
+    text-align: center;
+  }
+  .drag-text h3 {
+    font-weight: 100;
+    text-transform: uppercase;
+    color: #15824b;
+    padding: 60px 0;
+  }
+  
+  .file-upload-image {
+    max-height: 200px;
+    max-width: 200px;
+    margin: auto;
+    padding: 20px;
+  }
+  
+  .remove-image {
+   
+    width: 180px;
+    margin:0px;
+    margin-bottom: 30px;  
+    border: none;
+    padding: 10px;
+    border-radius: 4px;
+    background: #ffffff;
+    color:black;
+    transition: all .2s ease;
+    outline: none;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size:15px;
+  }
+  .remove-image:hover {
+    background: #c13b2a;
+    color: #ffffff;
+    transition: all .2s ease;
+    cursor: pointer;
+  }
+  .remove-image:active {
+    border: 0;
+    transition: all .2s ease;
+  }
   
