--- a/babmukja/src/main/webapp/resources/css/admin/insertformpb.css
+++ b/babmukja/src/main/webapp/resources/css/admin/insertformpb.css
@@ -34,6 +34,7 @@
 button:focus{
     outline: none;
 }
+
 button{
     border  : 0;
     background :gainsboro;
@@ -75,4 +76,8 @@ button:hover{
     margin-left :274px;
     outline: #7db341;
     text-align: center;
+}
+
+body {
+	background-color: white;
 }
