--- a/babmukja/src/main/webapp/resources/css/store/mainpb.css
+++ b/babmukja/src/main/webapp/resources/css/store/mainpb.css
@@ -44,10 +44,11 @@
   margin-top: 100px;
   margin-left: 20px;
   /* background-color: #7db341;  */
-  color: #7db341;
+  color: black;
   /*  color: white;  */
   font-size: 30px;
-  border-bottom: 3px solid gainsboro;
+  
+  text-align: center;
 }
 
 #pb_sotre_popular_keyword_img {
@@ -65,7 +66,7 @@
   margin-top: 20px;
   margin-left: 10px;
   grid-template-columns: repeat(4, 2fr);
-  grid-auto-rows: 280px;
+  grid-auto-rows: 200px;
   grid-gap: 2em;
   position: relative;
 }
@@ -84,7 +85,7 @@
   font-weight: bold;
   margin: 0 auto;
   padding-left: 80px;
-  padding-top: 130px;
+  padding-top: 90px;
   /* top: 50%; left: 50%;  */
   display: flex;
   justify-content: center;
@@ -95,15 +96,14 @@
 #pb_store_popular_product > #pb_store_popular_product_header {
   font-size: 20px;
   font-weight: bold;
-  margin-top: 160px;
+/*   margin-top: 160px; */
   margin-left: 20px;
   /* background-color: #7db341;  */
-  color: #7db341;
+  color: black;
   /* color: white;  */
-  display: flex;
-  justify-content: space-between;
+  text-align: center;
   font-size: 30px;
-  border-bottom: 3px solid gainsboro;
+  
 }
 
 #pb_store_popular_product_btn {
@@ -126,10 +126,18 @@
 }
  */
 
+.product_con {
+	width: 100%;
+	background-color: #f6f6f6;
+}
+
+
 #pb_store_popular_product_img {
-  width: 1000px;
+  width: 1250px;
   height: 500px;
   margin: 0 auto;
+  margin-top: -350px;
+  text-align: center;
 }
 
 .pb_store_popular_product_img > img{
@@ -143,8 +151,8 @@ a:link {
 }
 
 
-.pb_store_popular_product_text {
-  color: rgb(81, 81, 81);
+#pb_store_popular_product_text {
+  line-height: 300px;
 }
 
 .pb_store_popular_product_title {
@@ -170,12 +178,12 @@ margin-top: -10px;
 }
 
 #pb_store_popular_product_imges {
-    width: 1000px;
+/*     width: 1000px; */
 }
 
 #pb_store_popular_product_img > #pb_store_popular_product_imges > #pb_store_popular_product_imges_grid{
     display: grid;
-    width: 1000px;
+/*     width: 1000px; */
     height: 500px;
     margin: 0 auto;
     margin-top: 20px;
@@ -205,3 +213,62 @@ margin-top: -10px;
 hr {
   color: gainsboro;
 }
+
+
+.swiper-container {
+    width: 100%;
+    height: 100%;
+    background-color: tomato;
+  }
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+  .swiper-slide > img{
+    width: 100%;
+    height: 100%;
+  }
+  .swiper-slide > p{
+    position: absolute;
+    margin : 0 auto;
+    font-size : 60px;
+    font-weight: bolder;
+    color : white;
+  }
+  .swiper-slide > div:first-child{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    animation: fadeout 2s linear 1 alternate;
+    background:rgba(0,0,0,0.3);
+  }
+    @keyframes fadeout{
+      0%{background : rgba(0,0,0,1);}
+      100%{background:rgba(0,0,0,0.3);}
+  }
+
+  html, body {
+    position: relative;
+    height: 100%;
+  }
+  body {
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    color:#000;
+    margin: 0;
+    padding: 0;
+  } 
